[gd_scene load_steps=33 format=2]

[ext_resource path="res://recursos nivel 2/cielo.jpg" type="Texture" id=1]
[ext_resource path="res://Personaje nivel 2.gd" type="Script" id=2]
[ext_resource path="res://nave/nave4.png" type="Texture" id=3]
[ext_resource path="res://recursos nivel 2/Objeto1.gd" type="Script" id=4]
[ext_resource path="res://sprite asteoide.png" type="Texture" id=5]
[ext_resource path="res://recursos nivel 2/Objeto2.gd" type="Script" id=6]
[ext_resource path="res://recursos nivel 2/Objeto3.gd" type="Script" id=7]
[ext_resource path="res://recursos nivel 2/Objeto4.gd" type="Script" id=8]
[ext_resource path="res://diamante.png" type="Texture" id=9]
[ext_resource path="res://recursos nivel 2/Diamante.gd" type="Script" id=10]
[ext_resource path="res://Kenney Pixel.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://recursos nivel 2/Estadisticas lvl 2.gd" type="Script" id=12]
[ext_resource path="res://coraz√≥n.png" type="Texture" id=13]
[ext_resource path="res://recursos nivel 2/+1.tscn" type="PackedScene" id=14]
[ext_resource path="res://recursos nivel 2/sonido vida.mp3" type="AudioStream" id=15]
[ext_resource path="res://recursos nivel 2/Objeto5.gd" type="Script" id=16]
[ext_resource path="res://Escena final/nivel 1.mp3" type="AudioStream" id=17]
[ext_resource path="res://Escena final/golpe.mp3" type="AudioStream" id=18]
[ext_resource path="res://botones/izquierda.png" type="Texture" id=19]
[ext_resource path="res://botones/derecha.png" type="Texture" id=20]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 14.5, 32 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.5, 23 )

[sub_resource type="CircleShape2D" id=2]
radius = 33.0606

[sub_resource type="CircleShape2D" id=3]
radius = 34.1321

[sub_resource type="CircleShape2D" id=5]
radius = 33.5261

[sub_resource type="CircleShape2D" id=12]
radius = 33.9559

[sub_resource type="CircleShape2D" id=4]
radius = 34.1321

[sub_resource type="CircleShape2D" id=7]
radius = 38.1182

[sub_resource type="DynamicFont" id=8]
size = 70
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=9]
size = 70
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=10]
size = 70
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=11]
size = 70
font_data = ExtResource( 11 )

[node name="nivel 2" type="Node2D"]
script = ExtResource( 12 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1045.0
margin_bottom = 597.0
texture = ExtResource( 1 )
expand = true

[node name="Personaje nivel 2" type="KinematicBody2D" parent="."]
position = Vector2( 481, 162 )
collision_mask = 778240
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Personaje nivel 2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Personaje nivel 2/Area2D"]
position = Vector2( -0.5, 1 )
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="Personaje nivel 2"]
position = Vector2( 0, -0.5 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Personaje nivel 2"]
position = Vector2( -0.5, -2 )
shape = SubResource( 1 )

[node name="+1" parent="Personaje nivel 2" instance=ExtResource( 14 )]
visible = false
position = Vector2( -34, -69 )

[node name="Timer" type="Timer" parent="Personaje nivel 2"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Personaje nivel 2"]
stream = ExtResource( 15 )

[node name="Objeto1" type="KinematicBody2D" parent="."]
position = Vector2( 500, 635 )
collision_layer = 8192
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Objeto1"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objeto1"]
position = Vector2( 1, -1 )
shape = SubResource( 2 )

[node name="Objeto2" type="KinematicBody2D" parent="."]
position = Vector2( 713, 634 )
collision_layer = 16384
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Objeto2"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objeto2"]
shape = SubResource( 3 )

[node name="Objeto4" type="KinematicBody2D" parent="."]
position = Vector2( 99, 632 )
collision_layer = 65536
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="Objeto4"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objeto4"]
shape = SubResource( 5 )

[node name="Objeto5" type="KinematicBody2D" parent="."]
position = Vector2( 859, 633.057 )
collision_layer = 524288
script = ExtResource( 16 )

[node name="Sprite" type="Sprite" parent="Objeto5"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objeto5"]
shape = SubResource( 12 )

[node name="Objeto3" type="KinematicBody2D" parent="."]
position = Vector2( 257, 634 )
collision_layer = 32768
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Objeto3"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objeto3"]
shape = SubResource( 4 )

[node name="Diamante" type="KinematicBody2D" parent="."]
position = Vector2( 600, 630 )
collision_layer = 131072
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="Diamante"]
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Diamante"]
shape = SubResource( 7 )

[node name="BarraEstadistica" type="ColorRect" parent="."]
margin_left = -7.0
margin_top = 509.0
margin_right = 1052.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="Vida" type="Label" parent="."]
margin_left = 111.0
margin_top = 525.0
margin_right = 151.0
margin_bottom = 578.0
custom_fonts/font = SubResource( 8 )
text = "5	"

[node name="Imagen Vida" type="Sprite" parent="."]
position = Vector2( 61, 553 )
scale = Vector2( 0.875, 0.78125 )
texture = ExtResource( 13 )

[node name="Imagen Diamante" type="Sprite" parent="."]
position = Vector2( 226.25, 554 )
scale = Vector2( 0.720779, 0.75 )
texture = ExtResource( 9 )

[node name="Contador Puntos" type="Label" parent="."]
margin_left = 271.0
margin_top = 525.0
margin_right = 310.0
margin_bottom = 578.0
custom_fonts/font = SubResource( 9 )
text = "0	"

[node name="Distacia" type="Label" parent="."]
margin_left = 688.0
margin_top = 524.0
margin_right = 783.0
margin_bottom = 577.0
custom_fonts/font = SubResource( 10 )
text = "1000"

[node name="Texto Distancia" type="Label" parent="."]
margin_left = 468.0
margin_top = 522.0
margin_right = 682.0
margin_bottom = 575.0
custom_fonts/font = SubResource( 11 )
text = "Distancia: "

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="golpe" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="izquierda" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 20, 355 )
scale = Vector2( 0.26297, 0.223614 )
normal = ExtResource( 19 )
action = "ui_left"
visibility_mode = 1

[node name="derecha" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 873, 361 )
scale = Vector2( 0.245081, 0.216458 )
normal = ExtResource( 20 )
action = "ui_right"
visibility_mode = 1

[connection signal="body_entered" from="Personaje nivel 2/Area2D" to="Personaje nivel 2" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Personaje nivel 2/Timer" to="Personaje nivel 2" method="_on_Timer_timeout"]
